fix: products page align and mix blend mode

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,5 +1,6 @@
 .wrapper {
-  @apply container;
+  @apply container mix-blend-difference;
+  width: 100%;
   display: flex;
   align-items: center;
   position: sticky;
