--- a/src/components/product-card.module.css
+++ b/src/components/product-card.module.css
@@ -7,12 +7,13 @@
 
 .productImageStyle {
   margin-bottom: var(--space-md);
+  border: 2px solid #000;
 }
 
 .productDetailsStyle {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   font-weight: var(--semibold);
 }
@@ -25,7 +26,6 @@
 .productHeadingStyle {
   width: 100%;
   font-size: var(--text-lg);
-  text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
   line-height: var(--dense);
