--- a/src/components/product-listing.module.css
+++ b/src/components/product-listing.module.css
@@ -1,7 +1,5 @@
 .listingContainerStyle {
   display: grid;
   grid-template-columns: var(--product-grid);
-  place-items: center;
-  gap: var(--size-gutter-raw);
-  padding: 0 var(--size-gutter-raw);
+  place-items: start center;
 }
